[build-system]
# building cmake from pypi releases requires openssl-dev installed, so
# just require users install cmake from apt when getting python-dev (CPython headers)
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrf24"
description = "A python package for the wrapping nRF24 related C++ libraries."
readme = "README.rst"
keywords = ["nrf24l01", "nRF24L01+", "raspberry", "pi", "driver", "radio", "transceiver"]
license = {text = "GPLv2"}
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",  # TODO change this when ready
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
Documentation = "http://nRF24.github.io/pyRF24"
Source =  "https://github.com/nRF24/pyRF24"
Tracker = "https://github.com/nRF24/pyRF24/issues"

[tool.setuptools_scm]
# pypi does not accept version strings with commit SHA in it. See PEP440
local_scheme = "no-local-version"
fallback_version = "0.0.0"
version_scheme = "no-guess-dev"

[tool.mypy]
show_error_codes = true
pretty = true
